@@ -7,16 +7,13 @@ import com.google.maps.model.AddressComponent;
 import com.google.maps.model.AddressComponentType;
 import com.google.maps.model.GeocodingResult;
 import com.google.maps.model.LatLng;
-
 import greencity.constant.ErrorMessage;
 import greencity.dto.geocoding.AddressResponse;
 import greencity.dto.geocoding.AddressLatLngResponse;
 import greencity.exception.exceptions.BadRequestException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
 import org.springframework.stereotype.Service;
-
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -29,8 +26,8 @@ import java.util.Locale;
 @Slf4j
 public class GoogleApiService {
     private final GeoApiContext context;
-    private static final Locale UKRAINIAN = new Locale("uk");
-    private static final Locale ENGLISH = new Locale("en");
+    private static final Locale UKRAINIAN = Locale.of("uk");
+    private static final Locale ENGLISH = Locale.of("en");
     private static final List<Locale> LOCALES = List.of(UKRAINIAN, ENGLISH);
 
     /**
